--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         </div>
     </section>
     <section id="Gift">
-        <div class="GiftCards">
             <img src="./img/cards.png" alt="Cards">
+        <div class="GiftCards">
             <h2>Gift Cards</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque expedita tempore <br> quasi omnis a aut et totam illo fuga accusamus dolorum vero, ut harum <br> consectetur. Minima Molestias officiis cupla non sed dicta itaque. Et aliquam illo <br> obcaecati Molestias veritatis porro.
             </p>
-            <p>Already have an Orange MyTunes Music Gift Card?</p>
+            <p class="line">Already have an Orange MyTunes Music Gift Card?</p>
             <a href="#">Redeem</a>
         </div>
         
